fix: add some descriptions
